--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -11,10 +11,48 @@
 		<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
-
     <h1>Restaurants</h1>
+    <!-- Nav bar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <img src="../../images/logo.jpg" width="80" height="80" id="logo">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- collapse nav bar -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                    <a class="nav-link" href="../../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="html/about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="html/guideSections/cafes.html">Cafes</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Restaurants <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="html/guideSections/thingsToDo.html">Things To Do</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="html/guideSections/tourismSpots.html">Tourism Spots</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="html/guideSections/bars.html">Bars</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="html/guideSections/nightlife.html">Nightlife</a>
+            </li>
+                <li class="nav-item">
+                <a class="nav-link" href="html/help.html">Help</a>
+            </li>
+            </ul>
+        </div>
+    </nav>	
     <container-fluid>
-<div class="accordion" id="accordionExample">
+    <div class="accordion" id="accordionExample">
         <div class="card">
             <div class="card-header" id="headingOne">
             <h5 class="mb-0">
@@ -125,7 +163,7 @@
                         <p>Made In Belfast is a cosy restaurant serving a gastropub style menu using sustainable and locally sourced ingredients</p>
                         <p>Talbot Street</p>
                         <p>£££</p>
-                        <p><a href="http://madeinbelfastni.com/cathedral-quarter/"></a>Visit their website for more information</p>
+                        <p><a href="http://madeinbelfastni.com/cathedral-quarter/">Visit their website for more information</a></p>
                         <p>Opening Hours</p>   
                         <ul>
                             <li>Monday - Thursday: 12 - 9:30pm</li>
