--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -4,11 +4,11 @@
     <title>Restaurants</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="../../css/bootstrap.css"/>
-		<link type="text/css" rel="stylesheet" href="../../css/bootstrap.min.css"/>
-		<link type="text/css" rel="stylesheet" href="../../css/general.css"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="../../css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="../../css/general.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
 <body>
     <h1>Restaurants</h1>
@@ -25,28 +25,31 @@
                     <a class="nav-link" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="html/about.html">About</a>
+                <a class="nav-link" href="../about.html">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="html/guideSections/cafes.html">Cafes</a>
+                <a class="nav-link" href="cafes.html">Cafes</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Restaurants <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="html/guideSections/thingsToDo.html">Things To Do</a>
+                <a class="nav-link" href="thingsToDo.html">Things To Do</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="html/guideSections/tourismSpots.html">Tourism Spots</a>
+                <a class="nav-link" href="tourismSpots.html">Tourism Spots</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="html/guideSections/bars.html">Bars</a>
+                <a class="nav-link" href="bars.html">Bars</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="html/guideSections/nightlife.html">Nightlife</a>
+                <a class="nav-link" href="nightlife.html">Nightlife</a>
             </li>
-                <li class="nav-item">
-                <a class="nav-link" href="html/help.html">Help</a>
+            <li class="nav-item">
+                <a class="nav-link" href="../contact.html">Contact Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../help.html">Help</a>
             </li>
             </ul>
         </div>
